--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,16 @@
     color: #222222;
 }
 
-h1 {
+a {
+  text-decoration: none;
+}
+
+.section h1 {
     font-family: 'Raleway', sans-serif;
+}
+
+.section p {
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
@@ -23,6 +31,28 @@ h1 {
 
 .inline-header {
     display: inline-block;
+}
+
+.about-me {
+    font-weight: 300;
+    font-size: 25px;
+}
+
+.btn-outline-black {
+    background-color: transparent;
+    border: 1px solid #222222;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: #222222;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    transition: all 300ms ease-in-out;
+}
+
+.btn-outline-black:hover {
+    background-color: #222222;
+    color: #ecf0f1;
 }
 
 #section1 {
