--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,13 @@ a {
 }
 
 #section1 {
-    background-color: #ecf0f1;
+    background: -moz-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* ff3.6+ */
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(220,223,245,1)), color-stop(100%, rgba(236,240,241,1))); /* safari4+,chrome */
+background: -webkit-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* safari5.1+,chrome10+ */
+background: -o-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* opera 11.10+ */
+background: -ms-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* ie10+ */
+background: linear-gradient(115deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* w3c */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#DCDFF5', endColorstr='#ecf0f1',GradientType=1 ); /* ie6-9 */
 }
 
 #section2 {
