--- a/css/styles.css
+++ b/css/styles.css
@@ -57,12 +57,26 @@ a {
 
 #section1 {
     background: -moz-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* ff3.6+ */
-background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(220,223,245,1)), color-stop(100%, rgba(236,240,241,1))); /* safari4+,chrome */
-background: -webkit-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* safari5.1+,chrome10+ */
-background: -o-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* opera 11.10+ */
-background: -ms-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* ie10+ */
-background: linear-gradient(115deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* w3c */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#DCDFF5', endColorstr='#ecf0f1',GradientType=1 ); /* ie6-9 */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(220,223,245,1)), color-stop(100%, rgba(236,240,241,1))); /* safari4+,chrome */
+    background: -webkit-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* safari5.1+,chrome10+ */
+    background: -o-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* opera 11.10+ */
+    background: -ms-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* ie10+ */
+    background: linear-gradient(115deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* w3c */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#DCDFF5', endColorstr='#ecf0f1',GradientType=1 ); /* ie6-9 */
+}
+
+#section1-bg {
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+}
+
+#section1-bg svg {
+    opacity: 0.1;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    height: 57%;
 }
 
 #section2 {
