--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ a {
     top: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.15;
+    opacity: 0.08;
     background-image: url('../img/ts.svg');
     background-repeat: no-repeat;
     background-position: center;
@@ -121,8 +121,15 @@ a {
     position: relative;
     width: 320px;
     height: 200px;
-    background-color: rgba(0,77,64 ,0.8);
     border-radius: 7px;
     margin-bottom: 5%;
     display: inline-block;
+    transition: all 200ms ease-in-out;
+    -webkit-transition: all 200ms ease-in-out;
+    -moz-transition: all 200ms ease-in-out;
+    -o-transition: all 200ms ease-in-out;
+}
+
+.project-placeholder:hover {
+    background-color: rgba(0,77,64 ,1.0);
 }
