--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,11 @@ a {
     color: #ecf0f1;
 }
 
+.name {
+    font-family: 'Julius Sans One', sans-serif !important;
+    font-size: 4em;
+}
+
 #section1 {
     background: -moz-linear-gradient(335deg, rgba(220,223,245,1) 0%, rgba(236,240,241,1) 100%); /* ff3.6+ */
     background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(220,223,245,1)), color-stop(100%, rgba(236,240,241,1))); /* safari4+,chrome */
