--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,9 @@ a {
 .background-row {
     position: absolute;
     z-index: 5;
+    width: 100%;
+    height: 100%;
+    top: 0;
 }
 
 .content-row {
@@ -70,6 +73,7 @@ a {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#DCDFF5', endColorstr='#ecf0f1',GradientType=1 ); /* ie6-9 */
 }
 
+/* OLD
 #section1-bg {
     margin-top: -10%;
     width: 89vw;
@@ -77,6 +81,21 @@ a {
     position: relative;
     padding-bottom: 50%;
     vertical-align: top;
+}
+
+#section1-bg svg, img, object {
+    opacity: 0.15;
+    right: 0;
+    bottom: 0;
+    display: block;
+    position: absolute;
+    height: 80%;
+}
+*/
+
+#section1-bg {
+    width: 100%;
+    height: 100%;
 }
 
 #section1-bg svg, img, object {
