--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ a {
     font-size: 25px;
 }
 
+/*
 .btn-outline-black {
     background-color: transparent;
     border: 1px solid #222222;
@@ -52,6 +53,7 @@ a {
     font-weight: 300;
     transition: all 300ms ease-in-out;
 }
+*/
 
 .btn-outline-black:hover {
     background-color: #222222;
