--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,10 @@ a {
     position: relative;
 }
 
+.well-rounded {
+    border-radius: 20px !important;
+}
+
 .background-row {
     position: absolute;
     z-index: 5;
