--- a/css/styles (wheatley's conflicted copy 2017-05-13).css
+++ b/css/styles (wheatley's conflicted copy 2017-05-13).css
@@ -19,7 +19,6 @@ body {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#DCDFF5', endColorstr='#ecf0f1',GradientType=1 );
     */
 
-    background-color: #66BB6A;
     transition: all 700ms ease-in-out;
     -webkit-transition: all 700ms ease-in-out;
     -moz-transition: all 700ms ease-in-out;
@@ -91,6 +90,7 @@ body {
 #section1-bg {
     width: 100%;
     height: 100%;
+    background-color: red;
 }
 
 #section1-bg svg, img, object {
