--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,10 @@ body {
     -o-transition: all 700ms ease-in-out;
 }
 
+.white {
+    color: white !important;
+}
+
 .section h1 {
     font-family: 'Raleway', sans-serif;
 }
@@ -152,11 +156,61 @@ body {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
-#section3 {
+#section3 h1 {
+    text-transform: uppercase;
+    font-size: 4em;
+    padding-bottom: 2%;
 }
 
-#section3 h1 {
-    color: #5C6BC0;
-    font-size: 4.5em;
-    padding-bottom: 2%;
+.skill-card {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.skill-icon {
+    position: relative;
+}
+
+.skill-icon i {
+    border: 3px solid #EEEEEE;
+    border-radius: 99em;
+    padding: 20px;
+    position:relative;
+    font-size: 70px;
+}
+
+.beginner {
+    text-transform: uppercase;
+    font-size: 25px;
+    color: #03A9F4;
+}
+
+.intermediate {
+    text-transform: uppercase;
+    font-size: 25px;
+    color: #AB47BC;
+}
+
+.advanced {
+    text-transform: uppercase;
+    font-size: 25px;
+    color: #4CAF50;
+}
+
+.skill-icon-advanced {
+    border: 3px solid #4CAF50;
+    color: #4CAF50;
+}
+
+.skill-heading {
+    text-transform: uppercase;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.tech {
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
