--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,6 @@ body {
 }
 
 .skill-icon i {
-    border: 3px solid #EEEEEE;
     border-radius: 99em;
     padding: 20px;
     position:relative;
@@ -186,10 +185,22 @@ body {
     color: #03A9F4;
 }
 
+.skill-icon-beginner i {
+    border: 3px solid #03A9F4;
+    color: #03A9F4;
+    background-color: #4CAF50;
+}
+
 .intermediate {
     text-transform: uppercase;
     font-size: 25px;
     color: #AB47BC;
+}
+
+.skill-icon-intermediate i {
+    border: 3px solid #AB47BC;
+    color: #AB47BC;
+    background-color: #4CAF50;
 }
 
 .advanced {
@@ -198,9 +209,10 @@ body {
     color: #4CAF50;
 }
 
-.skill-icon-advanced {
-    border: 3px solid #4CAF50;
-    color: #4CAF50;
+.skill-icon-advanced i {
+    border: 3px solid #2E7D32;
+    color: #2E7D32;
+    background-color: #4CAF50;
 }
 
 .skill-heading {
