--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,7 @@ body {
     position: relative;
     display: flex;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .skill-icon {
@@ -188,19 +189,19 @@ body {
 .skill-icon-beginner i {
     border: 3px solid #03A9F4;
     color: #03A9F4;
-    background-color: #4CAF50;
+    background-color: #4FC3F7;
 }
 
 .intermediate {
     text-transform: uppercase;
     font-size: 25px;
-    color: #AB47BC;
+    color: #9C27B0;
 }
 
 .skill-icon-intermediate i {
-    border: 3px solid #AB47BC;
-    color: #AB47BC;
-    background-color: #4CAF50;
+    border: 3px solid #9C27B0;
+    color: #9C27B0;
+    background-color: #BA68C8;
 }
 
 .advanced {
