--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,9 @@ body {
 }
 
 #section2 h1 {
-    color: #222222;
-    font-size: 4.5em;
+    color: #EEEEEE;
+    text-transform: uppercase;
+    font-size: 4em;
     padding-bottom: 2%;
 }
 
@@ -166,7 +167,7 @@ body {
     position: relative;
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 65px;
 }
 
 .skill-icon {
