--- a/css/styles.css
+++ b/css/styles.css
@@ -19,11 +19,19 @@ body {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#DCDFF5', endColorstr='#ecf0f1',GradientType=1 );
     */
 
-    background-color: #66BB6A;
+    /* background-color: #66BB6A; */
     transition: all 700ms ease-in-out;
     -webkit-transition: all 700ms ease-in-out;
     -moz-transition: all 700ms ease-in-out;
     -o-transition: all 700ms ease-in-out;
+}
+
+#gradient-canvas {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: -9999;
+    background-color: teal;
 }
 
 .gradient-blue-grey {
