--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
     color: #222222;
 }
 
-a {
+a, btn {
   text-decoration: none;
 }
 
@@ -253,4 +253,9 @@ a {
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
+}
+
+.btn-unique {
+    background-color: black !important;
+    color: white;
 }
