--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,6 +23,11 @@ a, btn {
     -o-transition: all 700ms ease-in-out;
 }
 
+.name, .about-me, #about-buttons, #occ{
+    padding-top: 20px;
+    opacity: 0;
+}
+
 .mobile-browser-color {
     transition: all 700ms ease-in-out;
     -webkit-transition: all 700ms ease-in-out;
@@ -179,18 +184,23 @@ a, btn {
     border-radius: 5px;
     margin-bottom: 5%;
     display: inline-block;
+    /*
     transition: all 200ms ease-in-out;
     -webkit-transition: all 200ms ease-in-out;
     -moz-transition: all 200ms ease-in-out;
     -o-transition: all 200ms ease-in-out;
+    */
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     background-color: white;
+}
+
+.prime-grow {
     transform:scale(0);
     transform-origin:center center;
     transition: transform 500ms ease;
 }
 
-.show{
+.grow{
    transform:scale(1);
 }
 
