Change projects page background to teal

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -52,7 +52,7 @@ a, btn, button {
 .gradient-light-blue {
     opacity: 0.0;
     position: fixed;
-    background-color: #3F51B5;
+    background-color: #009688;
 }
 
 .gradient-grey {
